cabal-version:      3.0

name:               encoins-common-transform
version:            0.1.0.0
author:             Grigory Petrov
                    Vladimir Sinyakov
                    Vladislav Sabanov
maintainer:         team@encoins.io
synopsis:           Common utilities and approches shared through relay libraries

common lang
    default-language:   Haskell2010
    ghc-options:
      -fwarn-redundant-constraints
      -Wall
      -Widentities
      -Wincomplete-uni-patterns
      -Wincomplete-record-updates
      -Wnoncanonical-monad-instances
      -Wredundant-constraints
      -Wno-unused-do-bind
      -Wall

library
    import: lang
    hs-source-dirs: src
    exposed-modules:
      Encoins.Common.Transform

    build-depends:
      base                          >= 4.9 && < 5,
      text                                   -any,
      aeson                                  -any,
      bytestring                             -any,
